--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="box box1" contenteditable="true" draggable="true">Box 1</div>
-        <div class="box box2" contenteditable="true" draggable="true">Box 2</div>
-        <div class="box box3" contenteditable="true" draggable="true">Box 3</div>
+        <div class="box box1" contenteditable="true" draggable="true">Topic 1</div>
+        <div class="box box2" contenteditable="true" draggable="true">Topic 2</div>
+        <div class="box box3" contenteditable="true" draggable="true">Topic 3</div>
     </div>
 </body>
 </html>
